- 베타 버전 표시 추가

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -288,6 +288,16 @@
 		background-repeat:no-repeat;
 		transition:width .6s, height .3s;
 	}
+	.uk_logo.beta a:after {
+		@height:20px;
+		position:absolute; left:28px; top:28px; z-index:3;
+		transform:rotate(-20deg);
+		height:@height; line-height:@height; padding:0 6px;
+		.font-logo; font-size:13px; color:#fff; font-weight:400;
+		background:@blue; border-radius:2px;
+		content:"Beta";
+	}
+	.sub_page .uk_logo.beta a:after {left:-22px; top:12px;}
 	@media (max-width:@screen-md-max){
 		.uk_logo a {
 			width:140px; height:78px;
@@ -295,12 +305,25 @@
 			background-size:140px auto;
 		}
 		.device .uk_logo a {background-image:url('@{bg-url}/logo_140_device.gif');}
+		.uk_logo.beta a:after {
+			@height:18px;
+			left:24px; top:31px;
+			height:@height; line-height:@height; padding:0 4px;
+			font-size:12px;
+		}
+		.sub_page .uk_logo.beta a:after {left:-21px; top:15px;}
 	}
 	@media (max-width:@screen-sm-max){
 		.uk_logo a {
 			width:110px; height:@hdHeightMb;
 			background-image:url('@{bg-url}/logo_140_desktop.gif');
 			background-size:100px auto;
+		}
+		.uk_logo.beta a:after {
+			@height:14px;
+			left:-1px; top:8px;
+			height:@height; line-height:@height; padding:0 3px;
+			font-size:10px;
 		}
 		.sub_page .uk_header .uk_logo a {
 			position:relative;
@@ -314,6 +337,10 @@
 				background:@navy;
 				content:attr(data-tit);
 			}
+		}
+		.sub_page .uk_header .uk_logo.beta a:after {
+			left:55px; top:12px;
+			transform:rotate(0);
 		}
 	}
 
@@ -2481,6 +2508,7 @@
 			p {line-height:20px; font-size:18px;}
 		}
 	}
+
 
 
 
