--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -2078,6 +2078,27 @@ body {
   background-repeat: no-repeat;
   transition: width .6s, height .3s;
 }
+.uk_logo.beta a:after {
+  position: absolute;
+  left: 28px;
+  top: 28px;
+  z-index: 3;
+  transform: rotate(-20deg);
+  height: 20px;
+  line-height: 20px;
+  padding: 0 6px;
+  font-family: 'Jura', sans-serif;
+  font-size: 13px;
+  color: #fff;
+  font-weight: 400;
+  background: #1e73ff;
+  border-radius: 2px;
+  content: "Beta";
+}
+.sub_page .uk_logo.beta a:after {
+  left: -22px;
+  top: 12px;
+}
 @media (max-width: 993px) {
   .uk_logo a {
     width: 140px;
@@ -2088,6 +2109,18 @@ body {
   .device .uk_logo a {
     background-image: url('../img/logo_140_device.gif');
   }
+  .uk_logo.beta a:after {
+    left: 24px;
+    top: 31px;
+    height: 18px;
+    line-height: 18px;
+    padding: 0 4px;
+    font-size: 12px;
+  }
+  .sub_page .uk_logo.beta a:after {
+    left: -21px;
+    top: 15px;
+  }
 }
 @media (max-width: 767px) {
   .uk_logo a {
@@ -2095,6 +2128,14 @@ body {
     height: 60px;
     background-image: url('../img/logo_140_desktop.gif');
     background-size: 100px auto;
+  }
+  .uk_logo.beta a:after {
+    left: -1px;
+    top: 8px;
+    height: 14px;
+    line-height: 14px;
+    padding: 0 3px;
+    font-size: 10px;
   }
   .sub_page .uk_header .uk_logo a {
     position: relative;
@@ -2116,6 +2157,11 @@ body {
     letter-spacing: -1px;
     background: #081121;
     content: attr(data-tit);
+  }
+  .sub_page .uk_header .uk_logo.beta a:after {
+    left: 55px;
+    top: 12px;
+    transform: rotate(0);
   }
 }
 .uk_header {
