- 내장 컨텐츠 1차 완료

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2215,6 +2215,7 @@
 		h2 code {font-size:24px;}
 		h3 {line-height:28px; font-size:18px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
 		h3 .fa-html5 {margin:5px 0 0; color:@red;}
+		h3.reference a {font-weight:bold;}
 		h4 {line-height:24px; font-size:16px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
 	}
 	@media(max-width:@screen-md-max){
