--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -5715,6 +5715,9 @@ body {
   margin: 5px 0 0;
   color: #e44d26;
 }
+.content_area h3.reference a {
+  font-weight: bold;
+}
 .content_area h4 {
   line-height: 24px;
   font-size: 16px;
