- 표 데이터 1차 완료

--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -5936,8 +5936,11 @@ body {
 .line_code strong {
   display: inline-block;
   vertical-align: top;
-  color: #444;
-  font-weight: 500;
+  color: rgba(8, 17, 33, 0.9);
+  font-weight: 400;
+}
+.line_code strong code {
+  font-weight: normal;
 }
 .line_code b {
   font-weight: 500;
