--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2344,7 +2344,12 @@
 	@media(max-width:@screen-sm-max){}
 
 	.line_code {
-		strong {display:inline-block; vertical-align:top; color:#444; font-weight:500;}
+		strong {
+			display:inline-block; vertical-align:top; color:fade(@navy, 90%);
+			//font-weight:500;
+			font-weight:400;
+			code {font-weight:normal;}
+		}
 		b {font-weight:500;}
 		> p {
 			margin-top:2px; padding:8px 15px;
