--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2525,7 +2525,7 @@
 
 
 
-.CodeMirror-scroll {border:1px solid red;}
+.CodeMirror-scroll {border:1px solid blue;}
 //sub top , sub content common bakup
 /*-
 
