--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -5822,57 +5822,132 @@ body {
   color: #444;
   font-weight: 600;
 }
-.ol_lst ol {
+.ol_lst > ol {
   counter-reset: lst_number;
 }
-.ol_lst li {
+.ol_lst > li,
+.ol_lst > ol > li {
   position: relative;
   counter-increment: lst_number;
   padding-left: 22px;
 }
-.ol_lst li:before {
+.ol_lst > li:before,
+.ol_lst > ol > li:before {
   position: absolute;
   left: 0;
   top: 0;
   z-index: 2;
   content: counters(lst_number, ".") ". ";
 }
-.ol_lst li.line_code:before {
+.ol_lst > li.line_code:before,
+.ol_lst > ol > li.line_code:before {
   line-height: 28px;
   font-size: 18px;
   color: rgba(8, 17, 33, 0.9);
 }
-.ol_lst li.tit_h3:before {
+.ol_lst > li.tit_h3:before,
+.ol_lst > ol > li.tit_h3:before {
   line-height: 28px;
   font-size: 18px;
   color: rgba(8, 17, 33, 0.9);
   font-weight: bold;
 }
-.ol_lst li.line_code.font14:before {
+.ol_lst > li.line_code.font14:before,
+.ol_lst > ol > li.line_code.font14:before {
   line-height: 26px;
   font-size: 14px;
 }
-.ol_lst li.t_black:before {
-  color: #222;
+.ol_lst > li.t_black:before,
+.ol_lst > ol > li.t_black:before {
+  color: #222 !important;
   font-weight: bold;
 }
-.ol_lst li.t_black p,
-.ol_lst li.t_black div {
+.ol_lst > li.t_black p,
+.ol_lst > ol > li.t_black p,
+.ol_lst > li.t_black div,
+.ol_lst > ol > li.t_black div {
   color: #666;
 }
+.ol_lst_second > b,
+.ol_lst_second > strong {
+  color: #444;
+  font-weight: 600;
+}
+.ol_lst_second > ol {
+  counter-reset: lst_num;
+}
+.ol_lst_second > li,
+.ol_lst_second > ol > li {
+  position: relative;
+  counter-increment: lst_num;
+  padding-left: 22px;
+}
+.ol_lst_second > li:before,
+.ol_lst_second > ol > li:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  content: counters(lst_num, ".") ". ";
+}
+.ol_lst_second > li.line_code:before,
+.ol_lst_second > ol > li.line_code:before {
+  line-height: 28px;
+  font-size: 18px;
+  color: rgba(8, 17, 33, 0.9);
+}
+.ol_lst_second > li.tit_h3:before,
+.ol_lst_second > ol > li.tit_h3:before {
+  line-height: 28px;
+  font-size: 18px;
+  color: rgba(8, 17, 33, 0.9);
+  font-weight: bold;
+}
+.ol_lst_second > li.line_code.font14:before,
+.ol_lst_second > ol > li.line_code.font14:before {
+  line-height: 26px;
+  font-size: 14px;
+}
+.ol_lst_second > li.t_black:before,
+.ol_lst_second > ol > li.t_black:before {
+  color: #222 !important;
+  font-weight: bold;
+}
+.ol_lst_second > li.t_black p,
+.ol_lst_second > ol > li.t_black p,
+.ol_lst_second > li.t_black div,
+.ol_lst_second > ol > li.t_black div {
+  color: #666;
+}
+.ol_lst_second strong,
+.ol_lst_second span {
+  font-weight: 400 !important;
+}
 @media (max-width: 767px) {
-  .ol_lst li {
+  .ol_lst > li,
+  .ol_lst_second > li,
+  .ol_lst > ol > li,
+  .ol_lst_second > ol > li {
     padding-left: 18px;
   }
-  .ol_lst li.line_code:before {
+  .ol_lst > li.line_code:before,
+  .ol_lst_second > li.line_code:before,
+  .ol_lst > ol > li.line_code:before,
+  .ol_lst_second > ol > li.line_code:before {
     line-height: 28px;
     font-size: 18px;
   }
-  .ol_lst li.tit_h3:before {
+  .ol_lst > li.tit_h3:before,
+  .ol_lst_second > li.tit_h3:before,
+  .ol_lst > ol > li.tit_h3:before,
+  .ol_lst_second > ol > li.tit_h3:before {
     line-height: 22px;
     font-size: 16px;
   }
-  .ol_lst li.line_code.font14:before {
+  .ol_lst > li.line_code.font14:before,
+  .ol_lst_second > li.line_code.font14:before,
+  .ol_lst > ol > li.line_code.font14:before,
+  .ol_lst_second > ol > li.line_code.font14:before {
     line-height: 22px;
     font-size: 13px;
   }
@@ -6159,6 +6234,13 @@ body {
     border-width: 2px;
   }
 }
+.html5_small:after {
+  margin-left: 4px;
+  font-family: "Font Awesome 5 Brands", sans-serif;
+  font-size: 14px;
+  color: #e44d26;
+  content: "\f13b";
+}
 .dashed_line {
   margin: 0;
   border: 0;
@@ -6199,14 +6281,17 @@ body {
 .indent {
   margin-left: 25px;
 }
+.indent_small {
+  margin-left: 15px;
+}
 .indent_max {
   margin-left: 50px;
 }
 .t_blue {
-  color: #1e73ff;
+  color: #1e73ff !important;
 }
 .t_black {
-  color: #222;
+  color: #222 !important;
 }
 .break_all {
   word-break: break-all;
@@ -6251,9 +6336,6 @@ body {
     line-height: 20px;
     font-size: 18px;
   }
-}
-.CodeMirror-scroll {
-  border: 1px solid blue;
 }
 /*-
 
