- 폼, html문서구조 1차 완료

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2514,6 +2514,8 @@
 	.indent_small {margin-left:15px;}
 	.indent_max {margin-left:50px;}
 	.t_blue {color:@blue !important;}
+	.t_red {color:@red !important;}
+	.t_green {color:@green !important;}
 	.t_black {color:#222 !important;}
 	.break_all {word-break:break-all;}
 	@media(max-width:@screen-sm-max){
