--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -5569,6 +5569,12 @@ body {
   .side_menu_area .side_d2 li a {
     padding: 0 10px 0 44px;
   }
+  .depth3_last .side_menu_area {
+    display: none;
+  }
+  .depth3_last .content_area {
+    padding-top: 20px;
+  }
 }
 @media (max-width: 767px) {
   .sub_content {
@@ -5630,6 +5636,22 @@ body {
     top: 50px;
     padding: 0 10px;
     border-bottom: 2px solid #ccc;
+  }
+  .depth3_last {
+    z-index: 1;
+  }
+  .depth3_last:before {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    height: 2px;
+    background: #ccc;
+    content: "";
+  }
+  .depth3_last .content_area {
+    margin-top: -2px;
+    padding-top: 2px;
   }
 }
 @media (max-width: 360px) {
@@ -5705,6 +5727,14 @@ body {
 .content_area h2 code {
   font-size: 24px;
 }
+.content_area h2.html5:after {
+  margin: 0 0 0 7px;
+  font-family: "Font Awesome 5 Brands", sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  color: #e44d26;
+  content: "\f13b";
+}
 .content_area h3 {
   line-height: 28px;
   font-size: 18px;
@@ -5764,6 +5794,9 @@ body {
   .content_area h2 code {
     font-size: 20px;
   }
+  .content_area h2.html5:after {
+    font-size: 20px;
+  }
   .content_area h3 {
     line-height: 22px;
     font-size: 16px;
@@ -5783,6 +5816,9 @@ body {
   .content_area h2.html5:after {
     margin: 0 0 0 6px;
     font-size: 14px;
+  }
+  .content_area h2.html5:after {
+    font-size: 16px;
   }
 }
 .uk_note {
@@ -6055,6 +6091,7 @@ body {
 .img_figure figcaption {
   line-height: 20px;
   margin-top: 20px;
+  text-align: center;
   font-size: 14px;
   font-weight: 400;
   color: #888;
@@ -6232,6 +6269,177 @@ body {
     margin-top: -14px;
     padding: 20px 15px;
     border-width: 2px;
+  }
+  .reference a {
+    line-height: 22px;
+  }
+}
+.content_models {
+  padding: 20px 15px;
+  border: 4px solid #eee;
+  text-align: center;
+}
+.content_models img {
+  max-width: 100%;
+  min-width: 240px;
+}
+.content_models figcaption {
+  line-height: 20px;
+  margin-top: 20px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  color: #888;
+}
+.content_models figcaption p {
+  margin-top: 2px;
+  padding: 8px 15px;
+  font-family: 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
+  word-break: break-all;
+  color: #777;
+  background: #f9f9f9;
+}
+.content_models figcaption p:first-child {
+  margin-top: 0;
+}
+.content_models figcaption p code {
+  background: #fff;
+}
+.content_models .tab_wrap ul {
+  position: relative;
+  display: inline-block;
+  width: 50%;
+  min-width: 480px;
+  min-height: 200px;
+  margin: 15px auto 0;
+  padding-top: 20%;
+}
+.content_models .tab_wrap ul li {
+  position: absolute;
+  cursor: pointer;
+  border: 3px solid rgba(30, 115, 255, 0.7);
+  border-radius: 100%;
+  background: rgba(30, 115, 255, 0.5);
+}
+.content_models .tab_wrap ul li i {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  line-height: 16px;
+  margin-top: -8px;
+  text-align: center;
+  font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
+  font-size: 14px;
+  color: #fff;
+  font-weight: 600;
+  text-shadow: 0 0 3px #0058ea;
+}
+.content_models .tab_wrap ul li.on {
+  border-color: #0045b7;
+}
+.content_models .tab_wrap ul .flow {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.content_models .tab_wrap ul .flow i {
+  top: 10%;
+}
+.content_models .tab_wrap ul .metadata {
+  left: 0;
+  bottom: 0;
+  transform: rotate(-10deg);
+  width: 45%;
+  height: 40%;
+}
+.content_models .tab_wrap ul .metadata i {
+  transform: rotate(10deg);
+}
+.content_models .tab_wrap ul .interactive {
+  left: 5%;
+  top: 20%;
+  width: 35%;
+  height: 30%;
+}
+.content_models .tab_wrap ul .heading {
+  right: 8%;
+  top: 20%;
+  width: 30%;
+  height: 26%;
+}
+.content_models .tab_wrap ul .sectioning {
+  right: 8%;
+  bottom: 20%;
+  width: 30%;
+  height: 26%;
+}
+.content_models .tab_wrap ul .phrasing {
+  left: 30%;
+  top: 22%;
+  width: 30%;
+  height: 72%;
+}
+.content_models .tab_wrap ul .embedded {
+  left: 34%;
+  top: 29%;
+  width: 21%;
+  height: 20%;
+}
+.content_models .result_wrap {
+  position: relative;
+  margin-top: 30px;
+}
+.content_models .result_wrap dl {
+  visibility: hidden;
+}
+.content_models .result_wrap dl:not(:first-child) {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+.content_models .result_wrap dl.on {
+  visibility: visible;
+}
+.content_models .result_wrap dt {
+  line-height: 20px;
+  font-size: 16px;
+  color: #444;
+  font-weight: 600;
+}
+.content_models .result_wrap dt:after {
+  display: block;
+  width: 100px;
+  height: 2px;
+  margin: 14px auto 0;
+  background: #ddd;
+  content: "";
+}
+.content_models .result_wrap dd {
+  margin-top: 8px;
+  color: #1e73ff;
+}
+.content_models .result_wrap dd span {
+  color: #888;
+}
+@media (max-width: 620px) {
+  .content_models .tab_wrap ul {
+    width: 100%;
+    min-width: auto;
+    min-height: auto;
+    padding-top: 50%;
+  }
+  .content_models .tab_wrap ul li {
+    border-width: 2px;
+  }
+  .content_models .tab_wrap ul li i {
+    font-size: 12px;
+    font-weight: 500;
+  }
+  .content_models .result_wrap dt {
+    font-size: 14px;
   }
 }
 .html5_small:after {
