- 2. css초급 > 2.2. CSS 선택자 level 1,2 작업 중

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -129,6 +129,11 @@ mark {
 	.dp_md_pc {display:none !important;}
 }
 
+.dp_sm {display:none !important;}
+@media(max-width:@screen-sm){
+	.dp_sm {display:block !important;}
+}
+
 .dp_xxxxs {display:none !important;}
 @media(max-width:@screen-xxxxs){
 	.dp_xxxxs {display:block !important;}
