--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2622,6 +2622,9 @@
 	.break_all {word-break:break-all;}
 	.el_block {display:block !important;}
 	.font16 {font-size:16px;}
+	.t_center {text-align:center;}
+	.t_left {text-align:left;}
+	.t_right {text-align:right;}
 	@media(max-width:@screen-sm-max){
 		.mt_lm {margin-top:30px !important;}
 		.ml_mn {margin-left:-8px !important;}
@@ -2648,6 +2651,37 @@
 		}
 	}
 
+
+
+//sub content ----------------------------------------------------------------------------------------//
+	.table_basic {
+		border:4px solid #eee;
+		.cell {
+			display:table-cell; vertical-align:middle;
+			padding:5px 10px;
+			border-bottom:1px solid #eee; border-left:1px solid #eee;
+		}
+		.lst_hd,
+		.lst_bd > li {display:table; width:100%; table-layout:fixed;}
+		.lst_hd {text-align:center; color:#444; background:#fbfbfb;}
+		.lst_bd > li:last-child .cell {border-bottom:0;}
+	}
+
+	.specificity1, .specificity2 {
+		.tit {width:150px;}
+		.con_a, .con_b, .con_c, .equals {width:50px; .t_center;}
+		.result {.t_left; padding-left:15px;}
+	}
+	@media(max-width:@screen-sm){
+		.specificity1, .specificity2 {
+			font-size:12px;
+			.lst_hd {line-height:16px;}
+			.cell {padding:5px;}
+			.tit {width:100px;}
+			.con_a, .con_b, .con_c, .equals {width:30px; .t_center;}
+			.result {.t_left; padding-left:10px;}
+		}
+	}
 
 
 
