--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -383,6 +383,14 @@ mark {
     display: none !important;
   }
 }
+.dp_sm {
+  display: none !important;
+}
+@media (max-width: 620px) {
+  .dp_sm {
+    display: block !important;
+  }
+}
 .dp_xxxxs {
   display: none !important;
 }
@@ -6517,6 +6525,15 @@ body {
 .font16 {
   font-size: 16px;
 }
+.t_center {
+  text-align: center;
+}
+.t_left {
+  text-align: left;
+}
+.t_right {
+  text-align: right;
+}
 @media (max-width: 767px) {
   .mt_lm {
     margin-top: 30px !important;
@@ -6559,6 +6576,84 @@ body {
   .ready_content p {
     line-height: 20px;
     font-size: 18px;
+  }
+}
+.table_basic {
+  border: 4px solid #eee;
+}
+.table_basic .cell {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 5px 10px;
+  border-bottom: 1px solid #eee;
+  border-left: 1px solid #eee;
+}
+.table_basic .lst_hd,
+.table_basic .lst_bd > li {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+.table_basic .lst_hd {
+  text-align: center;
+  color: #444;
+  background: #fbfbfb;
+}
+.table_basic .lst_bd > li:last-child .cell {
+  border-bottom: 0;
+}
+.specificity1 .tit,
+.specificity2 .tit {
+  width: 150px;
+}
+.specificity1 .con_a,
+.specificity2 .con_a,
+.specificity1 .con_b,
+.specificity2 .con_b,
+.specificity1 .con_c,
+.specificity2 .con_c,
+.specificity1 .equals,
+.specificity2 .equals {
+  width: 50px;
+  text-align: center;
+}
+.specificity1 .result,
+.specificity2 .result {
+  text-align: left;
+  padding-left: 15px;
+}
+@media (max-width: 620px) {
+  .specificity1,
+  .specificity2 {
+    font-size: 12px;
+  }
+  .specificity1 .lst_hd,
+  .specificity2 .lst_hd {
+    line-height: 16px;
+  }
+  .specificity1 .cell,
+  .specificity2 .cell {
+    padding: 5px;
+  }
+  .specificity1 .tit,
+  .specificity2 .tit {
+    width: 100px;
+  }
+  .specificity1 .con_a,
+  .specificity2 .con_a,
+  .specificity1 .con_b,
+  .specificity2 .con_b,
+  .specificity1 .con_c,
+  .specificity2 .con_c,
+  .specificity1 .equals,
+  .specificity2 .equals {
+    width: 30px;
+    text-align: center;
+  }
+  .specificity1 .result,
+  .specificity2 .result {
+    text-align: left;
+    padding-left: 10px;
   }
 }
 /*-
