--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2233,8 +2233,14 @@
 			.font-icon2; font-size:22px; font-weight:bold; color:@red;
 			content:"\f13b";
 		}
+		h2.css3:after {
+			margin:0 0 0 7px;
+			.font-icon2; font-size:22px; font-weight:bold; color:@skyBlue;
+			content:"\f38b";
+		}
 		h3 {line-height:28px; font-size:18px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
 		h3 .fa-html5 {margin:5px 0 0; color:@red;}
+		h3 .fa-css3-alt {margin:5px 0 0; color:@skyBlue;}
 		h3.reference a {font-weight:bold;}
 		h4 {line-height:24px; font-size:16px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
 	}
@@ -2258,17 +2264,19 @@
 			}
 			h2 {line-height:@h2_h; font-size:18px;}
 			h2 code {font-size:20px;}
-			h2.html5:after {font-size:20px;}
+			h2.html5:after,
+			h2.css3:after {font-size:20px;}
 			h3 {line-height:22px; font-size:16px;}
-			h3 .fa-html5 {margin:4px 0 0;}
+			h3 .fa-html5,
+			h3 .fa-css3-alt {margin:4px 0 0;}
 			h4 {line-height:20px; font-size:15px;}
 		}
 	}
 	@media(max-width:@screen-xxs){
 		.content_area {
 			h2 {font-size:16px;}
-			h2.html5:after {margin:0 0 0 6px; font-size:14px;}
-			h2.html5:after {font-size:16px;}
+			h2.html5:after,
+			h2.css3:after {margin:0 0 0 6px; font-size:16px;}
 		}
 	}
 
@@ -2421,11 +2429,11 @@
 
 	.browser_support {
 		.clear; position:relative;
-		padding-top:33px; text-align:center;
+		text-align:center;
 		border:4px solid #eee;
 		&:before {
-			position:absolute; left:0; top:0; right:0;
-			line-height:30px; padding-bottom:3px;
+			display:block;
+			line-height:18px; padding:8px 10px 11px;
 			.font-en; font-size:14px; font-weight:600; color:#444;
 			background:#eee;
 			content:"Web Browser Support for "attr(data-tit);
@@ -2604,6 +2612,7 @@
 	}
 
 	.italic {font-style:italic;}
+
 	.mt_lm {margin-top:50px !important;}
 	.mt_l {margin-top:30px !important;}
 	.mt_ml {margin-top:25px !important;}
@@ -2611,14 +2620,19 @@
 	.mt_ms {margin-top:15px !important;}
 	.mt_s {margin-top:10px !important;}
 	.mt_sm {margin-top:5px !important;}
+	.mt_0 {margin-top:0 !important;}
 	.ml_mn {margin-left:-25px !important;}
 	.indent {margin-left:25px;}
 	.indent_small {margin-left:15px;}
 	.indent_max {margin-left:50px;}
+
 	.t_blue {color:@blue !important;}
+	.t_skyblue {color:@skyBlue !important;}
 	.t_red {color:@red !important;}
 	.t_green {color:@green !important;}
 	.t_black {color:#222 !important;}
+	.t_orange {color:@orange !important;}
+
 	.break_all {word-break:break-all;}
 	.el_block {display:block !important;}
 	.font16 {font-size:16px;}
@@ -2683,7 +2697,50 @@
 		}
 	}
 
+	.adjacent_sibling {
+		@pd:165px;
+		padding:15px 10px; .t_center;
+		border:4px solid #eee;
+		.inner_wrap {
+			position:relative;
+			display:inline-block; padding-right:@pd;
+		}
+		ul {
+			li {
+				position:relative; z-index:1; .t_center;
+				width:50px; height:30px; line-height:30px;
+				font-size:14px; color:#fff;
+				background:fade(@blue, 70%); border-radius:2px;
+				&:before {
+					position:absolute; z-index:-1;
+					background:#ccc;
+					content:"";
+				}
+			}
+			li:first-child:before {
+				left:20px; top:100%;
+				width:1px; height:146px;
+			}
+			li:not(:first-child) {
+				margin-top:10px; margin-left:40px;
+				&:before {
+					left:-20px; top:50%;
+					width:20px; height:1px;
+				}
+			}
+		}
 
+		.arr {
+			position:absolute; left:100%; top:50%;
+			width:@pd; line-height:20px;
+			margin-top:-10px; padding-left:25px;
+		}
+		.fas {
+			position:absolute; left:100%;
+			line-height:30px; margin-left:7px;
+			color:@red;
+		}
+	}
 
 //sub top , sub content common bakup
 /*-
