- 2. css초급 > 박스모델 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2742,6 +2742,17 @@
 		}
 	}
 
+	.iframe_con {
+		position:relative; overflow-y:hidden;
+		height:678px;
+		border:4px solid #eee;
+		iframe {
+			position:absolute; left:0; top:0;
+			width:100%; height:100%;
+			overflow:hidden;
+		}
+	}
+
 //sub top , sub content common bakup
 /*-
 
