- 3. css중급 > 3.1. CSS 선택자 level 3 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2628,6 +2628,8 @@
 	.mt_sm {margin-top:5px !important;}
 	.mt_0 {margin-top:0 !important;}
 	.ml_mn {margin-left:-25px !important;}
+	.mb_sm {margin-bottom:5px !important;}
+	.mb_s {margin-bottom:10px !important;}
 	.indent {margin-left:25px;}
 	.indent_small {margin-left:15px;}
 	.indent_max {margin-left:50px;}
